[#102] update events logic and initial data scripts
