# server/swagger_server/controllers/core_api_metrics_controller.py
@@ -30,30 +30,30 @@ def core_api_metrics_events_get(event_type=None, start_date=None, end_date=None)
     return rc.core_api_metrics_events_get(event_type, start_date, end_date)
 
 
-def core_api_metrics_events_people_uuid_get(uuid):  # noqa: E501
-    """Core API metrics people event details by UUID
+def core_api_metrics_events_people_membership_uuid_get(uuid):  # noqa: E501
+    """Core API metrics people membership by UUID
 
-    Core API metrics people event details by UUID # noqa: E501
-
-    :param uuid: universally unique identifier
-    :type uuid: str
-
-    :rtype: CoreApiMetricsEventsMembership
-    """
-    return rc.core_api_metrics_events_people_uuid_get(uuid)
-
-
-def core_api_metrics_events_projects_uuid_get(uuid):  # noqa: E501
-    """Core API metrics projects event details by UUID
-
-    Core API metrics projects event details by UUID # noqa: E501
+    Core API metrics people membership by UUID # noqa: E501
 
     :param uuid: universally unique identifier
     :type uuid: str
 
     :rtype: CoreApiMetricsEventsMembership
     """
-    return rc.core_api_metrics_events_projects_uuid_get(uuid)
+    return rc.core_api_metrics_events_people_membership_uuid_get(uuid)
+
+
+def core_api_metrics_events_projects_membership_uuid_get(uuid):  # noqa: E501
+    """Core API metrics projects membership by UUID
+
+    Core API metrics projects membership by UUID # noqa: E501
+
+    :param uuid: universally unique identifier
+    :type uuid: str
+
+    :rtype: CoreApiMetricsEventsMembership
+    """
+    return rc.core_api_metrics_events_projects_membership_uuid_get(uuid)
 
 
 def core_api_metrics_overview_get():  # noqa: E501
@@ -67,6 +67,19 @@ def core_api_metrics_overview_get():  # noqa: E501
     return rc.core_api_metrics_overview_get()
 
 
+def core_api_metrics_people_details_uuid_get(uuid):  # noqa: E501
+    """Core API metrics people details by UUID
+
+    Core API metrics people details by UUID # noqa: E501
+
+    :param uuid: universally unique identifier
+    :type uuid: str
+
+    :rtype: CoreApiMetricsPeopleOne
+    """
+    return rc.core_api_metrics_people_details_uuid_get(uuid)
+
+
 def core_api_metrics_people_get():  # noqa: E501
     """Core API metrics people
 
@@ -78,17 +91,17 @@ def core_api_metrics_people_get():  # noqa: E501
     return rc.core_api_metrics_people_get()
 
 
-def core_api_metrics_people_uuid_get(uuid):  # noqa: E501
-    """Core API metrics people details by UUID
+def core_api_metrics_projects_details_uuid_get(uuid):  # noqa: E501
+    """Core API metrics projects details by UUID
 
-    Core API metrics people details by UUID # noqa: E501
+    Core API metrics projects details by UUID # noqa: E501
 
     :param uuid: universally unique identifier
     :type uuid: str
 
-    :rtype: CoreApiMetricsPeopleOne
+    :rtype: CoreApiMetricsProjectsOne
     """
-    return rc.core_api_metrics_people_uuid_get(uuid)
+    return rc.core_api_metrics_projects_details_uuid_get(uuid)
 
 
 def core_api_metrics_projects_get():  # noqa: E501
@@ -100,16 +113,3 @@ def core_api_metrics_projects_get():  # noqa: E501
     :rtype: CoreApiMetricsProjects
     """
     return rc.core_api_metrics_projects_get()
-
-
-def core_api_metrics_projects_uuid_get(uuid):  # noqa: E501
-    """Core API metrics projects details by UUID
-
-    Core API metrics projects details by UUID # noqa: E501
-
-    :param uuid: universally unique identifier
-    :type uuid: str
-
-    :rtype: CoreApiMetricsProjectsOne
-    """
-    return rc.core_api_metrics_projects_uuid_get(uuid)
